--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
 <html>
-<form>
-Dice 1 <input type = "text" name = "d1" onkeyup="prob()">
-Dice 2 <input type = "text" name = "d2" onkeyup="prob()">
-</form>
-<p id="d1output">Experimental Probability:</p>
+<p>This simulation describes a game of rolling n amount of dice between two players, where Barney wins ties.</p>
+Patrick <input type = "text" id = "d1">
+Barney <input type = "text" id = "d2">
+Amount of Trials <input type = "text" id = "t">
+<button type = "button" id = "b" onclick = "prob();">Go!</button>
+<p id="eb">Experimental Probability (Barney):</p>
+<p id="ep">Experimental Probability (Patrick):</p>
 <script>
 function prob()
 {
-	var elem = document.getElementById("d1");
-	var elem2 = document.getElementById("d2");
-	document.getElementById("d1output").innerHTML = "hi";
+	var trials = document.getElementById('t').value;
+	var p, b, sp, sb;
+	for(var i = 0; i < trials; ++i)
+	{
+		p = Math.random()*6;
+		b = Math.random()*6;
+		if(p > b)
+		{
+			++sp;
+		}
+		else
+		{
+			++sb;
+		}
+	}
+	
+		var patprob = sb/trials;
+		document.getElementById("eb").innerHTML = sb;
+		document.getElementById("ep").innerHTML = 1-patprob;
 }
 </script>
 </html>
