--- a/index.html
+++ b/index.html
@@ -1,33 +1,58 @@
 <html>
 <p>This simulation describes a game of rolling n amount of dice between two players, where Barney wins ties.</p>
-Patrick <input type = "text" id = "d1">
-Barney <input type = "text" id = "d2">
+Barney <input type = "text" id = "d1">
+Patrick <input type = "text" id = "d2">
 Amount of Trials <input type = "text" id = "t">
 <button type = "button" id = "b" onclick = "prob();">Go!</button>
-<p id="eb">Experimental Probability (Barney):</p>
-<p id="ep">Experimental Probability (Patrick):</p>
+<p id="eb">Experimental Probability (Barney): </p>
+<p id="ep">Experimental Probability (Patrick): </p>
+<p id="ts">Trials/Second: </p>
 <script>
 function prob()
 {
+	var start = new Date().getTime();
 	var trials = document.getElementById('t').value;
-	var p, b, sp, sb;
+	var p, b, sumPatrick=0, sumBarney=0;
+	var barneyDie = document.getElementById('d1').value;
+	var patrickDie = document.getElementById('d2').value;
 	for(var i = 0; i < trials; ++i)
 	{
-		p = Math.random()*6;
-		b = Math.random()*6;
+		b = 0;
+		p = 0;
+		for(var x = 0; x < barneyDie; ++x)
+		{		
+			var newB = Math.floor(Math.random()*7);
+			if(newB > b)
+			{
+				b = newB;
+			}
+		}
+		for(var y = 0; y < patrickDie; ++y)
+		{		
+			var newP = Math.floor(Math.random()*7);
+			if(newP > p)
+			{
+				p = newP;
+			}
+		}
 		if(p > b)
 		{
-			++sp;
+			++sumPatrick;
 		}
-		else
+		else if(p <= b)
 		{
-			++sb;
+			++sumBarney;
 		}
 	}
 	
-		var patprob = sb/trials;
-		document.getElementById("eb").innerHTML = sb;
-		document.getElementById("ep").innerHTML = 1-patprob;
+		var barneyProb = sumBarney/trials;
+		var patrickProb = sumPatrick/trials;
+		document.getElementById("eb").innerHTML = "Experimental Probability (Barney): " + barneyProb;
+		document.getElementById("ep").innerHTML = "Experimental Probability (Patrick): " + patrickProb;
+		var end = new Date().getTime();
+		var totalElapsed = end - start;
+		var trialsPerMilli = trials/totalElapsed;
+		document.getElementById("ts").innerHTML = "Trials/Second: " + trialsPerMilli*1000;
 }
 </script>
 </html>
