--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
 <link rel="stylesheet" type="text/css" href="statstyle.css">
-</head>
+<introduction>
 <p>This simulation describes a game of rolling n amount of dice between two players, where Barney wins ties.</p>
-<p>
+</introduction>
+<hr>
 Barney <input type = "text" id = "d1">
 Patrick <input type = "text" id = "d2">
 Amount of Trials <input type = "text" id = "t">
 <button type = "button" id = "b" onclick = "prob();">Go!</button>
+<p></p>
 
 <body>
 
@@ -33,6 +34,7 @@ Amount of Trials <input type = "text" id = "t">
 	<td id = "mb"></td>
 	<td id = "mp"></td>
 </table>
+<p id = "ts">Trials/Second: </p>
 <script>
 function prob()
 {
