--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <introduction>
 <p>This simulation describes a game of rolling n amount of dice between two players, where Barney wins ties.</p>
 <p>Project Extension created by 6th period group of Jake White, Josh Roth, Kitti Gal, and Kyle Harder.</p>
-<p><impNum>Warning:</impNum> Large amounts of dice can lead to bad answers (Javascript cannot take 6 to a very large power!) and large amounts of trials  your browser catching fire!</p>
+<p><impNum>Warning:</impNum> Large amounts of dice can lead to bad <i>theoretical</i> answers and large amounts of trials can lead to your browser catching fire!</p>
 </introduction>
 <hr>
 Barney <input type = "number" id = "d1">
