change input types

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <hr>
 Barney <input type = "number" id = "d1">
 Patrick <input type = "number" id = "d2">
-Amount of Trials <input type = "text" id = "t">
+Amount of Trials <input type = "number" id = "t">
 <button type = "button" id = "b" onclick = "prob();">Go!</button>
 <p id = "warning"></p>
 
